# comfyui-portrait-master-cn

./: .gitignore  ImageSaver.py  PortraitMasterBaseCharacter.py  PortraitMasterMakeup.py  PortraitMasterSkinDetails.py  PortraitMasterStylePose.py  PortraitMasterlegacy.py  README.md  __init__.py  common.py  legacy.py  logger.py  pyproject.toml  types_ext.py
lists/: beard.txt  beard_color.txt  body_type.txt  clothes.txt  eyes_color.txt  eyes_shape.txt  face_expression.txt  face_shape.txt  female_lingerie.txt  gender.txt  gender_list.txt  hair_color.txt  hair_length.txt  hair_style.txt  light_direction.txt  light_type.txt  lips_color.txt  lips_shape.txt  makeup.txt  makeup_color.txt  model_pose.txt  nationality.txt  shot.txt  style.txt
