[project]
name = "comfyui-portrait-master-cn"
description = "ComfyUI 肖像大师中文版，这是一个用于生成 prompt 文本的 node, 无其他依赖。在原版基础上完成汉化并添加了一个 ImageSaver 用于保存 prompt 等元信息到 exif 的 node"
version = "3.2.3"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/DropFan/comfyui-portrait-master-cn"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "hacking4fun"
DisplayName = "Comfyui-Portrait-Master-cn 肖像大师中文版"
Icon = ""
